<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:orientation="vertical"
        android:paddingBottom="16dip"
        android:paddingLeft="8dip"
        android:paddingRight="2dip"
        android:paddingTop="16dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_developers_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_developers"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_developers_warning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffbb33" />

        <TextView
            android:id="@+id/about_translator_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_translator_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_translator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translator"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_version_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_source_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/about_source"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_support_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/about_support"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_support_warning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffbb33" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_desc_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/about_libraries_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/about_libraries_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_libraries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>